# calcru

./: AndroidManifest.xml  Makefile
.github/workflows/: main.yml
jni/: Android.mk  hello.c  sound.c  sound.h
res/drawable/: ic_launcher.xml
res/layout/: activity_main.xml
res/values-night/: themes.xml
rust_logic/: Cargo.toml
rust_logic/src/: lib.rs
src/com/cakru/dodge/: MainActivity.java
