[package]
name = "cakru_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
jni = "0.21.1"
# Kita kunci Candle di versi 0.6.0
candle-core = { version = "0.6.0", default-features = false }
candle-transformers = { version = "0.6.0", default-features = false }
tokenizers = { version = "0.19.1", default-features = false }
anyhow = "1.0"
once_cell = "1.18"

# INI KUNCINYA: Memaksa rand dan rand_distr tetap di versi 0.8 agar candle-core senang
rand = "=0.8.5"
rand_distr = "=0.4.3"
half = "=2.3.1"
