[package]
name = "cakru_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
jni = "0.21.1"
anyhow = "1.0"
once_cell = "1.18"

# Candle - Kita kunci fiturnya agar tidak melebar ke library C
candle-core = { version = "0.6.0", default-features = false }
candle-nn = { version = "0.6.0", default-features = false }
candle-transformers = { version = "0.6.0", default-features = false }

# Tokenizers - Pakai 'unstable_wasm' (meskipun bukan wasm) seringkali membantu 
# memaksa dia pakai engine Rust murni di target non-X86
tokenizers = { version = "0.19.1", default-features = false, features = ["fancy-regex"] }

# Pinning untuk stabilitas target Android
rand = "=0.8.5"
rand_distr = "=0.4.3"
half = "=2.3.1"
